<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.earthweb.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3498db"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ButtonHome"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/cadastrar_ranking"
                android:id="@+id/btnCadastrar"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e74c3c"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ButtonHome"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/aumentar_ranking"
                android:id="@+id/btnAumentar"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f1c40f"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ButtonHome"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/diminuir_ranking"
                android:id="@+id/btnDiminuir"/>
        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>